--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -1,5 +1,5 @@
 Wendy:
-  name             : "Wenhui (Wendy) Xiao"
+  name             : "Wenhui Xiao"
   avatar           : "/assets/images/bio-wendy.jpeg" 
   location         : "QUT & CSIRO"
   links:
